--- a/backend/django/pong/templates/home.html
+++ b/backend/django/pong/templates/home.html
@@ -8,6 +8,7 @@
 	{% else %}
 		<h1>HELLO STRANGER!</h1>
 		<a class="btn btn-primary" href="{% url 'login' %}" role="button">Login</a>
+		<a class="btn btn-primary" href="{% url 'register' %}" role="button">Register</a>
 	{% endif %}
 
 {% endblock %}
